# Findkey

./: CMakeLists.txt  Findkey  Findkey.cpp  README.md  index.html  params.json
src/: dialog.c  game.c  game.h  glog.c  highscore.h  main.c  player.h  types.h
